--- a/index.html
+++ b/index.html
@@ -30,6 +30,48 @@
 <main class="hero">
     <h1>Bienvenido a Game GXN</h1>
     <p>El mejor centro gaming de la ciudad.</p>
+
+<div class="floating-words">
+    <span class="word">SMURF</span>
+    <span class="word">FEDEADO</span>
+    <span class="word">ONESHOT</span>
+    <span class="word">KDA</span>
+    <span class="word">PENTA</span>
+    <span class="word">GG</span>
+    <span class="word">CRIT</span>
+    <span class="word">BUFF</span>
+    <span class="word">NOOB</span>
+    <span class="word">SLAYER</span>
+    <span class="word">ACE</span>
+    <span class="word">AFK</span>
+    <span class="word">OP</span>
+    <span class="word">NERF</span>
+    <span class="word">FARM</span>
+    <span class="word">STACK</span>
+    <span class="word">RUSH</span>
+    <span class="word">ZONE</span>
+    <span class="word">CLUTCH</span>
+    <span class="word">SMITE</span>
+    <span class="word">LASTHIT</span>
+    <span class="word">CC</span>
+    <span class="word">BUFFED</span>
+    <span class="word">DEBUFF</span>
+    <span class="word">MANA</span>
+    <span class="word">HP</span>
+    <span class="word">DPS</span>
+    <span class="word">TANK</span>
+    <span class="word">HEAL</span>
+    <span class="word">GANK</span>
+    <span class="word">SNIPER</span>
+    <span class="word">MIDLANE</span>
+    <span class="word">BOT</span>
+    <span class="word">TOPLANE</span>
+    <span class="word">JUNGLE</span>
+    <span class="word">POKE</span>
+    <span class="word">SPAM</span>
+    <span class="word">RESET</span>
+    <span class="word">QUEST</span>
+</div>
 </main>
 
 <!-- FOOTER EMPRESARIAL -->
@@ -67,6 +109,8 @@
         </div>
     </div>
 </footer>
+
+<script src="js/script_index.js"></script>
 
 </body>
 </html>
