--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <title>Game GXN - Nosotros</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+<body class="nosotros">
 
 <header class="navbar">
     <div class="logo">GAME GXN</div>
@@ -43,7 +43,7 @@
     <section class="bloques-secundarios">
 
         <div class="card">
-            <div class="imagen-card">
+            <div class="imagen-cardd">
                 <img src="imagenes/nosotros/mision.jpg" alt="Misión">
             </div>
             <h2>Nuestra Misión</h2>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="card">
-            <div class="imagen-card">
+            <div class="imagen-cardd">
                 <img src="imagenes/nosotros/vision.jpg" alt="Visión">
             </div>
             <h2>Nuestra Visión</h2>
